; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_demuxer.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_demuxer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }
%struct.TYPE_4__ = type { %struct.demuxer* }
%struct.demuxer = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@M_PROPERTY_UNAVAILABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_demuxer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_demuxer(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.m_property*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca %struct.demuxer*, align 8
  store i8* %0, i8** %6, align 8
  store %struct.m_property* %1, %struct.m_property** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %10, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.demuxer*, %struct.demuxer** %15, align 8
  store %struct.demuxer* %16, %struct.demuxer** %11, align 8
  %17 = load %struct.demuxer*, %struct.demuxer** %11, align 8
  %18 = icmp ne %struct.demuxer* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %4
  %20 = load i32, i32* @M_PROPERTY_UNAVAILABLE, align 4
  store i32 %20, i32* %5, align 4
  br label %30

21:                                               ; preds = %4
  %22 = load i32, i32* %8, align 4
  %23 = load i8*, i8** %9, align 8
  %24 = load %struct.demuxer*, %struct.demuxer** %11, align 8
  %25 = getelementptr inbounds %struct.demuxer, %struct.demuxer* %24, i32 0, i32 0
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @m_property_strdup_ro(i32 %22, i8* %23, i32 %28)
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %21, %19
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @m_property_strdup_ro(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
